# p5-simulation

./: .gitignore  README.md  default.nix  pyproject.toml  shell.nix
p5_simulation/: draw.py  main.py  optimize.py  parser.py  trees.py  utils.py
