[tool.poetry]
name = "p5_simulation"
version = "0.1.0"
description = ""
authors = ["Alexander Götzsche Dougherty <adough22@student.aau.dk>"]
readme = "README.md"
packages = [{ include = "p5_simulation" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.2"
pygame = "^2.6.1"

[tool.poetry.scripts]
project = "p5_simulation.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
